--- a/.gitignore
+++ b/.gitignore
@@ -69,6 +69,7 @@ StyleCopReport.xml
 *_p.c
 *_h.h
 *.ilk
+*.bin
 *.meta
 *.obj
 *.iobj
@@ -223,6 +224,7 @@ _pkginfo.txt
 ClientBin/
 ~$*
 *~
+*.db
 *.dbmdl
 *.dbproj.schemaview
 *.jfm
