--- a/Portal/Portal/Portal.csproj
+++ b/Portal/Portal/Portal.csproj
@@ -7,6 +7,8 @@
 
   <ItemGroup>
     <PackageReference Include="AngularJS.Core" Version="1.8.0" />
+    <PackageReference Include="bootstrap" Version="4.5.0" />
+    <PackageReference Include="font-awesome" Version="4.7.0" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.2.0" />
